src/np222kk/dv507/a2/test/cases/positive/test_return.ofp
void main() {
    
}

int i () {
    return 1;
}